<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mosque.mosque_madrasah.AddMadrasahFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_"
            style="@style/toolbar"
            android:background="#06483A"
            android:visibility="visible"
            tools:ignore="MissingConstraints">
            <LinearLayout
                android:layout_marginStart="15dp"
                android:layout_width="60dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_height="40dp">

                <ImageView
                    android:id="@+id/toolbar_back"
                    android:visibility="visible"
                    style="@style/next_img" />
                <TextView
                    android:text="@string/list"
                    style="@style/next_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="65dp"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_height="40dp">

                <ImageView
                    android:id="@+id/toolbar_scanner"
                    android:visibility="visible"
                    style="@style/scanner"/>
                <TextView
                    android:text="@string/tv_add_text_btn"
                    style="@style/next_text"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_tool"
                style="@style/text_toolbar"
                android:text="@string/medrese"
                android:visibility="visible" />

        </androidx.appcompat.widget.Toolbar>

        <EditText
            android:id="@+id/et_madrasah_name"
            style="@style/et_text"
            android:layout_marginTop="112dp"
            android:hint="@string/name_madrasah"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_madrasah_Contacts"
            style="@style/et_text"
            android:layout_marginTop="15dp"
            android:hint="@string/contacts"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/et_madrasah_name"
            app:layout_constraintStart_toStartOf="@+id/et_madrasah_name"
            app:layout_constraintTop_toBottomOf="@+id/et_madrasah_name" />

        <EditText
            android:id="@+id/et_madrasah_address"
            style="@style/et_text"
            android:layout_marginTop="15dp"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toEndOf="@+id/et_madrasah_Contacts"
            app:layout_constraintStart_toStartOf="@+id/et_madrasah_Contacts"
            app:layout_constraintTop_toBottomOf="@+id/et_madrasah_Contacts" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/et_madrasah_address"
            app:layout_constraintStart_toStartOf="@+id/et_madrasah_address"
            app:layout_constraintTop_toBottomOf="@+id/et_madrasah_address">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/tv_shape">

                <TextView
                    android:id="@+id/tv_add_photo"
                    style="@style/tv_add_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_ph_text"
                    style="@style/tv_add_des"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_add_photo" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="2dp"
                    android:src="@drawable/icon_ph"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_ph_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="6dp"
                android:background="@drawable/tv_shape">

                <TextView
                    style="@style/tv_add_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/icon_ph"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="6dp"
                android:background="@drawable/tv_shape">

                <TextView
                    style="@style/tv_add_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/icon_ph"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/tv_shape">

                <TextView
                    style="@style/tv_add_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/icon_ph"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="6dp"
                android:background="@drawable/tv_shape">

                <TextView
                    style="@style/tv_add_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/icon_ph"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="6dp"
                android:background="@drawable/tv_shape">

                <TextView
                    style="@style/tv_add_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/icon_ph"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


        <TextView
            style="@style/btn_add_tv_size"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>