<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.mechet.Islamicuniversities.adduniversities.AddUniversitiesFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_universities_name"
            style="@style/et_text"
            android:layout_marginTop="112dp"
            android:hint="@string/name_universities"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_universities_Contacts"
            style="@style/et_text"
            android:layout_marginTop="15dp"
            android:hint="@string/contacts"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/et_universities_name"
            app:layout_constraintStart_toStartOf="@+id/et_universities_name"
            app:layout_constraintTop_toBottomOf="@+id/et_universities_name" />

        <EditText
            android:id="@+id/et_universities_address"
            style="@style/et_text"
            android:layout_marginTop="15dp"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toEndOf="@+id/et_universities_Contacts"
            app:layout_constraintStart_toStartOf="@+id/et_universities_Contacts"
            app:layout_constraintTop_toBottomOf="@+id/et_universities_Contacts" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/et_universities_address"
            app:layout_constraintStart_toStartOf="@+id/et_universities_address"
            app:layout_constraintTop_toBottomOf="@+id/et_universities_address">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/tv_shape">

                <TextView
                    android:id="@+id/tv_add_photo"
                    style="@style/tv_add_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_ph_text"
                    style="@style/tv_add_des"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_add_photo" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="2dp"
                    android:src="@drawable/icon_ph"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_ph_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="6dp"
                android:background="@drawable/tv_shape">

                <TextView
                    style="@style/tv_add_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/icon_ph"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="6dp"
                android:background="@drawable/tv_shape">

                <TextView
                    style="@style/tv_add_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/icon_ph"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/tv_shape">

                <TextView
                    style="@style/tv_add_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/icon_ph"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="6dp"
                android:background="@drawable/tv_shape">

                <TextView
                    style="@style/tv_add_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/icon_ph"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="6dp"
                android:background="@drawable/tv_shape">

                <TextView
                    style="@style/tv_add_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/icon_ph"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


        <TextView
            style="@style/btn_add_tv_size"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>